; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdiconn.c_TdiAddressSizeFromType.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdiconn.c_TdiAddressSizeFromType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TDI_ADDRESS_LENGTH_IP = common dso_local global i32 0, align 4
@TDI_ADDRESS_LENGTH_APPLETALK = common dso_local global i32 0, align 4
@TDI_ADDRESS_LENGTH_NETBIOS = common dso_local global i32 0, align 4
@TDI_ADDRESS_LENGTH_IPX = common dso_local global i32 0, align 4
@TDI_ADDRESS_LENGTH_VNS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"TdiAddressSizeFromType - invalid type: %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TdiAddressSizeFromType(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %15 [
    i32 131, label %5
    i32 132, label %7
    i32 129, label %9
    i32 130, label %11
    i32 128, label %13
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @TDI_ADDRESS_LENGTH_IP, align 4
  store i32 %6, i32* %2, align 4
  br label %18

7:                                                ; preds = %1
  %8 = load i32, i32* @TDI_ADDRESS_LENGTH_APPLETALK, align 4
  store i32 %8, i32* %2, align 4
  br label %18

9:                                                ; preds = %1
  %10 = load i32, i32* @TDI_ADDRESS_LENGTH_NETBIOS, align 4
  store i32 %10, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = load i32, i32* @TDI_ADDRESS_LENGTH_IPX, align 4
  store i32 %12, i32* %2, align 4
  br label %18

13:                                               ; preds = %1
  %14 = load i32, i32* @TDI_ADDRESS_LENGTH_VNS, align 4
  store i32 %14, i32* %2, align 4
  br label %18

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @DbgPrint(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %16)
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %15, %13, %11, %9, %7, %5
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @DbgPrint(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
